Removed carousel for now as I think thats the issue causing horizontal scroll

--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -1,4 +1,5 @@
 .carousel {
+    display: none;
     width: 100%;
     overflow: hidden;
     background-color: var(--primary);
